Left align only th text (solves #51)

--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -4,8 +4,10 @@ table.table, .table>table {
     border-collapse: collapse;
     margin: 10px 0px;
 
-    th, td {
+    th {
         text-align: left;
+    }
+    th, td {
         padding: 10px 15px;
     }
     tbody>tr {
